# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.12 ==
 * Show each GENI site on map (#995)

== 2.11 ==
 * Quiet debug output in KM (#981)
 * Explicitly use the inside cert/key when launching Flack (#982)
 * Update GENI citation policy on account activation (#983)
 * Add GRAM aggregate (#984)
 * Add expiration column to certificate tables (#985)
 * Update to latest iRODS server cert (#986)
 * Fix occasional flack loading errors (#987)
 * Add 2nd GRAM aggregate (#989)
 * Use an overlay to help speaks-for flow (#991)

== 2.10.1 ==
 * Fix tool-omniconfigure for downloading just your Omni config
   file to preserve the requested version number in the URL,
   allowing you to get a config file for Omni 2.5. (#980)

== 2.10 ==
 * Support service attributes in portal and database (#968)
 * Pass the `--alap` option to omni calls
   (requires Omni 2.5) (#969)
 * Use explicit time zone in renew dates (#971)
 * Pass a default MA to the xml-signer tool (#972)
 * Use the chapi framework / interface from Omni 2.5. (#974)
   * Use the gcf configured agg_nick_cache.base 
     (we should update it as needed)
   * Hard codes the CH URL based on the authority name
   * Fix the gcf logging config to allow debug logs to the log file
 * Have omni-bundle.zip and omni_config include ability to use chapi (#975)
 * Have Details page querying aggregates one at a time (#465)

== 2.9 ==
 * Remove hardcoded URNs (#10)
 * Add mailto link for help on error-text page (#921)
 * Undo changes that caused a logout on insufficient attributes (#939)
 * Allow anonymous RSpecs (#957)
 * Support speaks-for in logging API (#966)
 * Support Federation API v2 (#967)

== 2.8 ==
   * Ensure max date in slice renew datepicker is by project
     expiration not slice expiration. Also, make project expirations