@@ -137,7 +137,6 @@ dist_svcweb_DATA = \
 	www/portal/query-sliverstatus.php \
 	www/portal/query-details.php \
 	www/portal/raw-sliverstatus.php \
-	www/portal/readyToLogin.php \
 	www/portal/renewsliver.php \
 	www/portal/request_test.php \
 	www/portal/rspecdelete.php \
