@@ -6,6 +6,7 @@
 
 == 2.12 ==
  * Show each GENI site on map (#995)
+ * Remove unused readyToLogin page (#996)
 
 == 2.11 ==
  * Quiet debug output in KM (#981)
